vercre-holder/tests/snapshots/presentation__presentation_requested2.snap
---
source: vercre-holder/tests/presentation.rs
assertion_line: 179
expression: presentation
---
id: "[id]"
status: Requested
request:
  client_id: "http://vercre.io/callback"
  client_id_scheme: redirect_uri
  client_metadata: "{\"client_id\":\"http://vercre.io\",\"redirect_uris\":[\"http://localhost:3000/callback\"],\"response_types\":[\"vp_token\",\"id_token vp_token\"],\"client_name\":\"Verifier\",\"vp_formats\":{\"jwt_vc_json\":{\"alg\":[\"ES256K\"],\"proof_type\":[\"JsonWebSignature2020\"]}}}"
  nonce: "[nonce]"
  presentation_definition: "[presentation_definition]"
  response_type: vp_token
  state: "[state]"
credentials:
  - id: "https://example.com/credentials/3732"
    issuer: "https://vercre.io"
    vc:
      "@context":
        - "https://www.w3.org/2018/credentials/v1"
        - "https://www.w3.org/2018/credentials/examples/v1"
      id: "https://example.com/credentials/3732"
      type:
        - VerifiableCredential
        - EmployeeIDCredential
      issuer: "https://example.com/issuers/14"
      issuanceDate: "2023-11-20T23:21:55Z"
      credentialSubject:
        id: "did:example:ebfeb1f712ebc6f1c276e12ec21"
        employeeId: "1234567890"
      expirationDate: "2033-12-20T23:21:55Z"
    metadata:
      format: jwt_vc_json
      scope: EmployeeIDCredential
      cryptographic_binding_methods_supported:
        - "did:key"
        - "did:web"
      credential_signing_alg_values_supported:
        - ES256K
        - EdDSA
      proof_types_supported:
        jwt:
          proof_signing_alg_values_supported:
            - ES256K
            - EdDSA
      display:
        - name: Employee ID
          locale: en-NZ
          logo:
            uri: "https://vercre.github.io/assets/employee.png"
            alt_text: Vercre Logo
          description: Vercre employee ID credential
          background_color: "#323ed2"
          background_image:
            uri: "https://vercre.github.io/assets/vercre-background.png"
            alt_text: Vercre Background
          text_color: "#ffffff"
      credential_definition:
        "@context":
          - "https://www.w3.org/2018/credentials/v1"
          - "https://www.w3.org/2018/credentials/examples/v1"
        type:
          - VerifiableCredential
          - EmployeeIDCredential
        credentialSubject:
          email:
            mandatory: true
            value_type: string
            display:
              - name: Email
                locale: en-NZ
          familyName:
            mandatory: true
            value_type: string
            display:
              - name: Family name
                locale: en-NZ
          givenName:
            mandatory: true
            value_type: string
            display:
              - name: Given name
                locale: en-NZ
    issued: eyJhbGciOiJFZERTQSIsInR5cCI6Imp3dCIsImtpZCI6ImRpZDp3ZWI6ZGVtby5jcmVkaWJpbC5pbyNrZXktMCJ9.eyJzdWIiOiJkaWQ6ZXhhbXBsZTplYmZlYjFmNzEyZWJjNmYxYzI3NmUxMmVjMjEiLCJuYmYiOjE3MDA1MjI1MTUsImlzcyI6Imh0dHBzOi8vZXhhbXBsZS5jb20vaXNzdWVycy8xNCIsImlhdCI6MTcwMDUyMjUxNSwianRpIjoiaHR0cHM6Ly9leGFtcGxlLmNvbS9jcmVkZW50aWFscy8zNzMyIiwiZXhwIjoyMDE4NzMzNzE1LCJ2YyI6eyJAY29udGV4dCI6WyJodHRwczovL3d3dy53My5vcmcvMjAxOC9jcmVkZW50aWFscy92MSIsImh0dHBzOi8vd3d3LnczLm9yZy8yMDE4L2NyZWRlbnRpYWxzL2V4YW1wbGVzL3YxIl0sImlkIjoiaHR0cHM6Ly9leGFtcGxlLmNvbS9jcmVkZW50aWFscy8zNzMyIiwidHlwZSI6WyJWZXJpZmlhYmxlQ3JlZGVudGlhbCIsIkVtcGxveWVlSURDcmVkZW50aWFsIl0sImlzc3VlciI6Imh0dHBzOi8vZXhhbXBsZS5jb20vaXNzdWVycy8xNCIsImlzc3VhbmNlRGF0ZSI6IjIwMjMtMTEtMjBUMjM6MjE6NTVaIiwiY3JlZGVudGlhbFN1YmplY3QiOnsiaWQiOiJkaWQ6ZXhhbXBsZTplYmZlYjFmNzEyZWJjNmYxYzI3NmUxMmVjMjEiLCJlbXBsb3llZUlkIjoiMTIzNDU2Nzg5MCJ9LCJleHBpcmF0aW9uRGF0ZSI6IjIwMzMtMTItMjBUMjM6MjE6NTVaIn19.LANNC7fGRZI2ZUP43vKtm-6izCvd27r5qLDREK9XWnXq6MWfRlg1v3WU_xIONRm2wP4JeYp_4CXuHzJHTnPNAQ
filter:
  fields:
    - path:
        - $.type
      filter:
        type: string
        const: EmployeeIDCredential
submission:
  id: ""
  definition_id: ""
  descriptor_map: []
