vercre-holder/tests/snapshots/presentation__response_response.snap
---
source: vercre-holder/tests/presentation.rs
assertion_line: 229
expression: response
snapshot_kind: text
---
redirect_uri: "http://localhost:3000/cb"
response_code: ~
