vercre-holder/tests/snapshots/presentation__response_response2.snap
---
source: vercre-holder/tests/presentation.rs
assertion_line: 225
expression: response
---
redirect_uri: "http://localhost:3000/cb"
response_code: ~
